# exact-diagonalization

./: .gitignore
DiagLinearRotorDimer/: DataForHistogramFor2HF-DipoleMoment1.86Debye.txt  EigenValuesFor2HF-DipoleMoment1.86.txt  EigenValuesFor2HF-DipoleMoment1.86Debye-Jrot6.txt  EigenValuesFor2HF-DipoleMoment1.86Debye.txt  H  MakeHistogram.py  Makefile  bb  dimer-diag-old.cxx  dimer-diag.cxx  ev  log  run  submission.py  submission1.py
DiagLinearRotorMonomer/: DataForHistogramFor1HF-Rpt0.5Angstrom-DipoleMoment1.86Debye.txt  DataForHistogramFor1HF-Rpt1.5Angstrom-DipoleMoment1.86Debye.txt  DataForHistogramFor1HF-Rpt10.5Angstrom-DipoleMoment1.86Debye.txt  DataForHistogramFor1HF-Rpt10Angstrom-DipoleMoment1.86Debye.txt  DataForHistogramFor1HF-Rpt1Angstrom-DipoleMoment1.86Debye.txt  DataForHistogramFor1HF-Rpt2.5Angstrom-DipoleMoment1.86Debye.txt  DataForHistogramFor1HF-Rpt2Angstrom-DipoleMoment1.86Debye.txt  DataForHistogramFor1HF-Rpt3.5Angstrom-DipoleMoment1.86Debye.txt  DataForHistogramFor1HF-Rpt3Angstrom-DipoleMoment1.86Debye.txt  (+41 more)
pkg_monomer_rotor/: .gitignore  .rsyncignore  LICENSE  README.md  deploy.sh  extract_quantum_data_from_netcdf.py  extract_quantum_data_from_netcdf_and_analyze.py  inspect_file.py  main.py  pyproject.toml  submit_rotor_jobs_all_at_once.py  submit_rotor_jobs_all_at_once_refined.py  thermodynamics_kelvin.py
pkg_monomer_rotor/monomer_linear_rotor/: __init__.py  analysis.py  basis.py  cli.py  debug.py  dipole.py  hamiltonian.py  io_netcdf.py  molecule_data.py  solver.py  thermo.py  utils.py
pkg_monomer_rotor/tests/: test_import.py
src1/: evsym  (+4 more)
(+2318 files in other folders)
